// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityMembers renders with content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={null}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Object {
        "paddingBottom": 90,
        "paddingHorizontal": 20,
      }
    }
    data={
      Array [
        Object {
          "__typename": "CommunityPersonEdge",
          "communityPermission": Object {
            "__typename": "CommunityPermission",
            "createdAt": "2018-10-03T08:17:53.279Z",
            "id": "2",
            "permission": "user",
          },
          "node": Object {
            "__typename": "Person",
            "createdAt": "2016-01-27T11:31:41.601Z",
            "firstName": "Elizabeth",
            "fullName": "Elizabeth Zulauf",
            "id": "3",
            "lastName": "Zulauf",
            "picture": "ratione ut sunt",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={12}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    testID="CommunityMemberList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 24,
                  "fontWeight": "300",
                  "lineHeight": 30,
                  "marginBottom": 20,
                  "marginTop": 15,
                },
              ]
            }
          >
            93255 Members
          </Text>
        </RCTSafeAreaView>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "elevation": 4,
              "marginHorizontal": 0,
              "marginVertical": 4,
              "opacity": 1,
              "paddingLeft": 14,
              "paddingVertical": 14,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 6,
            }
          }
          testID="CommunityMemberItem"
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "ratione ut sunt",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 18,
                    "height": 36,
                    "width": 36,
                  },
                  Object {
                    "backgroundColor": "rgb(123, 122, 125)",
                  },
                  Object {
                    "marginRight": 8,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#505256",
                      "fontSize": 16,
                    },
                  ]
                }
              >
                Elizabeth Zulauf
              </Text>
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "color": "#B4B6BA",
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  Member since
                   
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Object {
                          "color": "#B4B6BA",
                          "fontSize": 12,
                        },
                      ]
                    }
                    testID="Text"
                  >
                    October 2018
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          INVITE MEMBER
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="IconButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "#B4B6BA",
                "borderRadius": 25,
              },
              null,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 26,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "margin": 2,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`CommunityMembers should load next page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -51,10 +51,46 @@
              \\"id\\": \\"5\\",
              \\"lastName\\": \\"Hyatt\\",
              \\"picture\\": \\"recusandae ut nulla\\",
            },
          },
+         Object {
+           \\"__typename\\": \\"CommunityPersonEdge\\",
+           \\"communityPermission\\": Object {
+             \\"__typename\\": \\"CommunityPermission\\",
+             \\"createdAt\\": \\"2017-09-28T01:02:07.116Z\\",
+             \\"id\\": \\"7\\",
+             \\"permission\\": \\"user\\",
+           },
+           \\"node\\": Object {
+             \\"__typename\\": \\"Person\\",
+             \\"createdAt\\": \\"2015-06-20T04:51:30.834Z\\",
+             \\"firstName\\": \\"Alek\\",
+             \\"fullName\\": \\"Alek Lesch\\",
+             \\"id\\": \\"8\\",
+             \\"lastName\\": \\"Lesch\\",
+             \\"picture\\": \\"libero repudiandae esse\\",
+           },
+         },
+         Object {
+           \\"__typename\\": \\"CommunityPersonEdge\\",
+           \\"communityPermission\\": Object {
+             \\"__typename\\": \\"CommunityPermission\\",
+             \\"createdAt\\": \\"2015-09-24T22:48:18.365Z\\",
+             \\"id\\": \\"9\\",
+             \\"permission\\": \\"owner\\",
+           },
+           \\"node\\": Object {
+             \\"__typename\\": \\"Person\\",
+             \\"createdAt\\": \\"2012-11-17T16:58:59.414Z\\",
+             \\"firstName\\": \\"Brooklyn\\",
+             \\"fullName\\": \\"Brooklyn Weimann\\",
+             \\"id\\": \\"10\\",
+             \\"lastName\\": \\"Weimann\\",
+             \\"picture\\": \\"velit omnis et\\",
+           },
+         },
        ]
      }
      disableVirtualization={false}
      getItem={[Function anonymous]}
      getItemCount={[Function anonymous]}
@@ -112,11 +148,11 @@
                    \\"marginTop\\": 15,
                  },
                ]
              }
            >
-             11 Members
+             44345 Members
            </Text>
          </RCTSafeAreaView>
        </View>
        <View
          onLayout={[Function onLayout]}
@@ -419,10 +455,320 @@
                        ]
                      }
                      testID=\\"Text\\"
                    >
                      July 2016
+                   </Text>
+                 </Text>
+               </View>
+             </View>
+           </View>
+         </View>
+       </View>
+       <View
+         onLayout={[Function onLayout]}
+         style={null}
+       >
+         <View
+           accessible={true}
+           focusable={true}
+           isTVSelectable={true}
+           onClick={[Function bound touchableHandlePress]}
+           onResponderGrant={[Function bound touchableHandleResponderGrant]}
+           onResponderMove={[Function bound touchableHandleResponderMove]}
+           onResponderRelease={[Function bound touchableHandleResponderRelease]}
+           onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
+           onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
+           onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
+           style={
+             Object {
+               \\"backgroundColor\\": \\"#ffffff\\",
+               \\"borderRadius\\": 8,
+               \\"elevation\\": 4,
+               \\"marginHorizontal\\": 0,
+               \\"marginVertical\\": 4,
+               \\"opacity\\": 1,
+               \\"paddingLeft\\": 14,
+               \\"paddingVertical\\": 14,
+               \\"shadowColor\\": \\"#000000\\",
+               \\"shadowOffset\\": Object {
+                 \\"height\\": 2,
+                 \\"width\\": 0,
+               },
+               \\"shadowOpacity\\": 0.1,
+               \\"shadowRadius\\": 6,
+             }
+           }
+           testID=\\"CommunityMemberItem\\"
+         >
+           <View
+             style={
+               Array [
+                 Object {},
+                 Object {
+                   \\"alignItems\\": \\"center\\",
+                   \\"flex\\": 1,
+                   \\"flexDirection\\": \\"row\\",
+                   \\"justifyContent\\": \\"center\\",
+                 },
+               ]
+             }
+           >
+             <Image
+               resizeMode=\\"cover\\"
+               source={
+                 Object {
+                   \\"uri\\": \\"libero repudiandae esse\\",
+                 }
+               }
+               style={
+                 Array [
+                   Object {
+                     \\"borderRadius\\": 18,
+                     \\"height\\": 36,
+                     \\"width\\": 36,
+                   },
+                   Object {
+                     \\"backgroundColor\\": \\"rgb(216, 115, 125)\\",
+                   },
+                   Object {
+                     \\"marginRight\\": 8,
+                   },
+                 ]
+               }
+             />
+             <View
+               style={
+                 Array [
+                   Object {},
+                   Object {
+                     \\"flex\\": 1,
+                     \\"flexDirection\\": \\"column\\",
+                   },
+                 ]
+               }
+             >
+               <Text
+                 style={
+                   Array [
+                     Object {
+                       \\"color\\": \\"#505256\\",
+                     },
+                     Object {
+                       \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                     },
+                     Object {
+                       \\"color\\": \\"#505256\\",
+                       \\"fontSize\\": 16,
+                     },
+                   ]
+                 }
+               >
+                 Alek Lesch
+               </Text>
+               <View
+                 style={
+                   Array [
+                     Object {},
+                     Object {
+                       \\"alignItems\\": \\"center\\",
+                       \\"flexDirection\\": \\"row\\",
+                     },
+                   ]
+                 }
+               >
+                 <Text
+                   style={
+                     Array [
+                       Object {
+                         \\"color\\": \\"#505256\\",
+                       },
+                       Object {
+                         \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                       },
+                       Object {
+                         \\"color\\": \\"#B4B6BA\\",
+                         \\"fontSize\\": 12,
+                       },
+                     ]
+                   }
+                 >
+                   Member since
+                    
+                   <Text
+                     style={
+                       Array [
+                         Object {
+                           \\"color\\": \\"#505256\\",
+                         },
+                         Object {
+                           \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                         },
+                         Object {
+                           \\"color\\": \\"#B4B6BA\\",
+                           \\"fontSize\\": 12,
+                         },
+                       ]
+                     }
+                     testID=\\"Text\\"
+                   >
+                     September 2017
+                   </Text>
+                 </Text>
+               </View>
+             </View>
+           </View>
+         </View>
+       </View>
+       <View
+         onLayout={[Function onLayout]}
+         style={null}
+       >
+         <View
+           accessible={true}
+           focusable={true}
+           isTVSelectable={true}
+           onClick={[Function bound touchableHandlePress]}
+           onResponderGrant={[Function bound touchableHandleResponderGrant]}
+           onResponderMove={[Function bound touchableHandleResponderMove]}
+           onResponderRelease={[Function bound touchableHandleResponderRelease]}
+           onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
+           onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
+           onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
+           style={
+             Object {
+               \\"backgroundColor\\": \\"#ffffff\\",
+               \\"borderRadius\\": 8,
+               \\"elevation\\": 4,
+               \\"marginHorizontal\\": 0,
+               \\"marginVertical\\": 4,
+               \\"opacity\\": 1,
+               \\"paddingLeft\\": 14,
+               \\"paddingVertical\\": 14,
+               \\"shadowColor\\": \\"#000000\\",
+               \\"shadowOffset\\": Object {
+                 \\"height\\": 2,
+                 \\"width\\": 0,
+               },
+               \\"shadowOpacity\\": 0.1,
+               \\"shadowRadius\\": 6,
+             }
+           }
+           testID=\\"CommunityMemberItem\\"
+         >
+           <View
+             style={
+               Array [
+                 Object {},
+                 Object {
+                   \\"alignItems\\": \\"center\\",
+                   \\"flex\\": 1,
+                   \\"flexDirection\\": \\"row\\",
+                   \\"justifyContent\\": \\"center\\",
+                 },
+               ]
+             }
+           >
+             <Image
+               resizeMode=\\"cover\\"
+               source={
+                 Object {
+                   \\"uri\\": \\"velit omnis et\\",
+                 }
+               }
+               style={
+                 Array [
+                   Object {
+                     \\"borderRadius\\": 18,
+                     \\"height\\": 36,
+                     \\"width\\": 36,
+                   },
+                   Object {
+                     \\"backgroundColor\\": \\"rgb(175, 55, 155)\\",
+                   },
+                   Object {
+                     \\"marginRight\\": 8,
+                   },
+                 ]
+               }
+             />
+             <View
+               style={
+                 Array [
+                   Object {},
+                   Object {
+                     \\"flex\\": 1,
+                     \\"flexDirection\\": \\"column\\",
+                   },
+                 ]
+               }
+             >
+               <Text
+                 style={
+                   Array [
+                     Object {
+                       \\"color\\": \\"#505256\\",
+                     },
+                     Object {
+                       \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                     },
+                     Object {
+                       \\"color\\": \\"#505256\\",
+                       \\"fontSize\\": 16,
+                     },
+                   ]
+                 }
+               >
+                 Brooklyn Weimann
+               </Text>
+               <View
+                 style={
+                   Array [
+                     Object {},
+                     Object {
+                       \\"alignItems\\": \\"center\\",
+                       \\"flexDirection\\": \\"row\\",
+                     },
+                   ]
+                 }
+               >
+                 <Text
+                   style={
+                     Array [
+                       Object {
+                         \\"color\\": \\"#505256\\",
+                       },
+                       Object {
+                         \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                       },
+                       Object {
+                         \\"color\\": \\"#B4B6BA\\",
+                         \\"fontSize\\": 12,
+                       },
+                     ]
+                   }
+                 >
+                   Member since
+                    
+                   <Text
+                     style={
+                       Array [
+                         Object {
+                           \\"color\\": \\"#505256\\",
+                         },
+                         Object {
+                           \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                         },
+                         Object {
+                           \\"color\\": \\"#B4B6BA\\",
+                           \\"fontSize\\": 12,
+                         },
+                       ]
+                     }
+                     testID=\\"Text\\"
+                   >
+                     September 2015
                    </Text>
                  </Text>
                </View>
              </View>
            </View>"
`;

exports[`CommunityMembers should render empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={<FooterLoading />}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Object {
        "paddingBottom": 90,
        "paddingHorizontal": 20,
      }
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={12}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={true}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    testID="CommunityMemberList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 24,
                  "fontWeight": "300",
                  "lineHeight": 30,
                  "marginBottom": 20,
                  "marginTop": 15,
                },
              ]
            }
          >
            0 Members
          </Text>
        </RCTSafeAreaView>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "padding": 10,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color="rgba(0, 0, 0, 1)"
            hidesWhenStopped={true}
            size="small"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          INVITE MEMBER
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="IconButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "#B4B6BA",
                "borderRadius": 25,
              },
              null,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 26,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "margin": 2,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`CommunityMembers should render loading state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={<FooterLoading />}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Object {
        "paddingBottom": 90,
        "paddingHorizontal": 20,
      }
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={12}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={true}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    testID="CommunityMemberList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 24,
                  "fontWeight": "300",
                  "lineHeight": 30,
                  "marginBottom": 20,
                  "marginTop": 15,
                },
              ]
            }
          >
            0 Members
          </Text>
        </RCTSafeAreaView>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              Object {
                "padding": 10,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color="rgba(0, 0, 0, 1)"
            hidesWhenStopped={true}
            size="small"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          INVITE MEMBER
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="IconButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "#B4B6BA",
                "borderRadius": 25,
              },
              null,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 26,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "margin": 2,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
